Database access changed; Default "Tasks" collection added to DB;
Icons & Colors added;
View Model structure edited;
ReactiveUI added;

--- a/PlanIt/App.axaml
+++ b/PlanIt/App.axaml
@@ -17,6 +17,7 @@
              
     <Application.Resources>
         <converters:FilterBlockResponsiveWidthConverter x:Key="FilterBlockResponsiveWidthConverter"></converters:FilterBlockResponsiveWidthConverter>
+        <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"></converters:BoolToVisibilityConverter>
         <converters:DividerResponsiveWidthConverter x:Key="DividerResponsiveWidthConverter"></converters:DividerResponsiveWidthConverter>
     </Application.Resources>
 </Application>
