--- a/PlanIt/Views/MainWindow.axaml
+++ b/PlanIt/Views/MainWindow.axaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="960" d:DesignHeight="540"
         x:Class="PlanIt.Views.MainWindow"
-        x:DataType="vm:MainWindowViewModel"
+        x:DataType="vm:MainViewModel"
         Icon="/Assets/avalonia-logo.ico"
         Title="PlanIt"
         Width="960"
@@ -16,36 +16,36 @@
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs)-->
-        <vm:MainWindowViewModel/>
+        <vm:MainViewModel/>
     </Design.DataContext>
     
-    <Window.DataTemplates>
-        <DataTemplate>
-            <Grid ColumnDefinitions="Auto, *, Auto" HorizontalAlignment="Stretch" VerticalAlignment="Center" ColumnSpacing="5">
-                <Ellipse Width="26" Height="26" HorizontalAlignment="Left" VerticalAlignment="Center" Fill="Red"></Ellipse>
-                <TextBlock Grid.Column="1" Classes="t-16 t-r" VerticalAlignment="Center" TextWrapping="Wrap">Tasks</TextBlock>
-                <TextBlock Grid.Column="2" Classes="t-18 t-b" HorizontalAlignment="Right" VerticalAlignment="Center">15</TextBlock>
-            </Grid>
-        </DataTemplate>
-        
-        <DataTemplate>
-            <Border Classes="task">
-                <Grid ColumnDefinitions="Auto, *, Auto, Auto, Auto, Auto, Auto">
-                    <ToggleButton Width="32" Height="32" Classes="taskToggle" VerticalAlignment="Center" HorizontalAlignment="Left"></ToggleButton>
-                    <TextBlock Grid.Column="1" Classes="t-20 t-m" VerticalAlignment="Center" HorizontalAlignment="Stretch" TextWrapping="Wrap" Margin="12 0">Some task title</TextBlock>
-                    <TextBlock Grid.Column="2" VerticalAlignment="Center" Classes="t-16 second">21.06.2026</TextBlock>
-                    <TextBlock Grid.Column="3" VerticalAlignment="Center" Classes="t-16 second" Margin="6 0">/</TextBlock>
-                    <TextBlock  Grid.Column="4" VerticalAlignment="Center" Classes="t-16 second" Margin="0 0 16 0">17:00</TextBlock>
-                    <Button Grid.Column="5" Width="24" Height="24" Classes="taskBtn">
-                        <Svg Path="../Assets/Images/edit.svg" Height="24" Width="24"></Svg>
-                    </Button>
-                    <Button Grid.Column="6" Width="24" Height="24" Classes="taskBtn">
-                        <Svg Path="../Assets/Images/trash.svg" Height="24" Width="24"></Svg>
-                    </Button>
-                </Grid>
-            </Border>
-        </DataTemplate>
-    </Window.DataTemplates>
+    <!-- <Window.DataTemplates> -->
+    <!--     <DataTemplate> -->
+    <!--         <Grid ColumnDefinitions="Auto, *, Auto" HorizontalAlignment="Stretch" VerticalAlignment="Center" ColumnSpacing="5"> -->
+    <!--             <Ellipse Width="26" Height="26" HorizontalAlignment="Left" VerticalAlignment="Center" Fill="Red"></Ellipse> -->
+    <!--             <TextBlock Grid.Column="1" Classes="t-16 t-r" VerticalAlignment="Center" TextWrapping="Wrap">Tasks</TextBlock> -->
+    <!--             <TextBlock Grid.Column="2" Classes="t-18 t-b" HorizontalAlignment="Right" VerticalAlignment="Center">15</TextBlock> -->
+    <!--         </Grid> -->
+    <!--     </DataTemplate> -->
+    <!--      -->
+    <!--     <DataTemplate> -->
+    <!--         <Border Classes="task"> -->
+    <!--             <Grid ColumnDefinitions="Auto, *, Auto, Auto, Auto, Auto, Auto"> -->
+    <!--                 <ToggleButton Width="32" Height="32" Classes="taskToggle" VerticalAlignment="Center" HorizontalAlignment="Left"></ToggleButton> -->
+    <!--                 <TextBlock Grid.Column="1" Classes="t-20 t-m" VerticalAlignment="Center" HorizontalAlignment="Stretch" TextWrapping="Wrap" Margin="12 0">Some task title</TextBlock> -->
+    <!--                 <TextBlock Grid.Column="2" VerticalAlignment="Center" Classes="t-16 second">21.06.2026</TextBlock> -->
+    <!--                 <TextBlock Grid.Column="3" VerticalAlignment="Center" Classes="t-16 second" Margin="6 0">/</TextBlock> -->
+    <!--                 <TextBlock  Grid.Column="4" VerticalAlignment="Center" Classes="t-16 second" Margin="0 0 16 0">17:00</TextBlock> -->
+    <!--                 <Button Grid.Column="5" Width="24" Height="24" Classes="taskBtn"> -->
+    <!--                     <Svg Path="../Assets/Images/edit.svg" Height="24" Width="24"></Svg> -->
+    <!--                 </Button> -->
+    <!--                 <Button Grid.Column="6" Width="24" Height="24" Classes="taskBtn"> -->
+    <!--                     <Svg Path="../Assets/Images/trash.svg" Height="24" Width="24"></Svg> -->
+    <!--                 </Button> -->
+    <!--             </Grid> -->
+    <!--         </Border> -->
+    <!--     </DataTemplate> -->
+    <!-- </Window.DataTemplates> -->
     
     <Grid>
         <Grid.ColumnDefinitions>
@@ -58,7 +58,7 @@
                 <Border x:Name="UpperBlock" Padding="11 8">
                     <Grid ColumnDefinitions="*, Auto">
                         <StackPanel Orientation="Horizontal" Spacing="6">
-                            <Svg VerticalAlignment="Center" Path="../Assets/Images/Logo.svg" Height="36" Width="36"></Svg>
+                            <Svg VerticalAlignment="Center" Path="{DynamicResource Logo}" Height="36" Width="36"></Svg>
                             <TextBlock VerticalAlignment="Center" Classes="t-b t-22">PlanIt</TextBlock>
                         </StackPanel>
                         <ToggleSwitch Grid.Column="1" x:Name="ThemeChanger" OnContent="" OffContent=""></ToggleSwitch>
@@ -81,7 +81,7 @@
                                         <StackPanel Orientation="Vertical" Spacing="3" HorizontalAlignment="Left">
                                             <Grid HorizontalAlignment="Left">
                                                 <Ellipse Height="34" Width="34" HorizontalAlignment="Center" VerticalAlignment="Center" Classes="today"></Ellipse>
-                                                <Svg Path="..\Assets\Images\calendar_day.svg" Height="22" Width="22" HorizontalAlignment="Center" VerticalAlignment="Center"></Svg>
+                                                <Svg Path="{DynamicResource CalendarDay}" Height="22" Width="22" HorizontalAlignment="Center" VerticalAlignment="Center"></Svg>
                                             </Grid>
                                             <TextBlock Classes="t-16 today t-sb" HorizontalAlignment="Left">Today</TextBlock>
                                         </StackPanel>
@@ -95,7 +95,7 @@
                                         <StackPanel Orientation="Vertical" Spacing="6" HorizontalAlignment="Left">
                                             <Grid HorizontalAlignment="Left">
                                                 <Ellipse Height="34" Width="34" HorizontalAlignment="Center" VerticalAlignment="Center" Classes="scheduled"></Ellipse>
-                                                <Svg Path="..\Assets\Images\calendar_many.svg" Height="22" Width="22" HorizontalAlignment="Center" VerticalAlignment="Center"></Svg>
+                                                <Svg Path="{DynamicResource CalendarMany}" Height="22" Width="22" HorizontalAlignment="Center" VerticalAlignment="Center"></Svg>
                                             </Grid>
                                             <TextBlock Classes="t-16 scheduled t-sb" HorizontalAlignment="Left">Scheduled</TextBlock>
                                         </StackPanel>
@@ -109,7 +109,7 @@
                                         <StackPanel Orientation="Vertical" Spacing="6" HorizontalAlignment="Left">
                                             <Grid HorizontalAlignment="Left">
                                                 <Ellipse Height="34" Width="34" HorizontalAlignment="Center" VerticalAlignment="Center" Classes="all"></Ellipse>
-                                                <Svg Path="..\Assets\Images\box.svg" Height="22" Width="22" HorizontalAlignment="Center" VerticalAlignment="Center"></Svg>
+                                                <Svg Path="{DynamicResource Box}" Height="22" Width="22" HorizontalAlignment="Center" VerticalAlignment="Center"></Svg>
                                             </Grid>
                                             <TextBlock Classes="t-16 all t-sb" HorizontalAlignment="Left">All</TextBlock>
                                         </StackPanel>
@@ -123,7 +123,7 @@
                                         <StackPanel Orientation="Vertical" Spacing="6" HorizontalAlignment="Left">
                                             <Grid HorizontalAlignment="Left">
                                                 <Ellipse Height="34" Width="34" HorizontalAlignment="Center" VerticalAlignment="Center" Classes="important"></Ellipse>
-                                                <Svg Path="..\Assets\Images\exclamation.svg" Height="22" Width="22" HorizontalAlignment="Center" VerticalAlignment="Center"></Svg>
+                                                <Svg Path="{DynamicResource Exclamation}" Height="22" Width="22" HorizontalAlignment="Center" VerticalAlignment="Center"></Svg>
                                             </Grid>
                                             <TextBlock Classes="t-16 important t-sb" HorizontalAlignment="Left">Important</TextBlock>
                                         </StackPanel>
@@ -136,7 +136,7 @@
                             <Grid Grid.Row="2" RowDefinitions="Auto, *" RowSpacing="8">
                                 <Grid ColumnDefinitions="*, Auto">
                                     <TextBlock Classes="t-b t-22" HorizontalAlignment="Left" VerticalAlignment="Center">Categories</TextBlock>
-                                    <Button Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Width="30" Height="30" Classes="btn"><Svg Path="../Assets/Images/plus.svg" Width="18" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center"></Svg></Button>
+                                    <Button Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Width="30" Height="30" Classes="btn"><Svg Path="{DynamicResource Plus}" Width="18" Height="18" HorizontalAlignment="Center" VerticalAlignment="Center"></Svg></Button>
                                 </Grid>
                                 <ListBox Grid.Row="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled">
                                     <ListBoxItem Classes="category">
@@ -166,10 +166,13 @@
                 <Border Padding="8" HorizontalAlignment="Stretch">
                     <Border Padding="6" x:Name="Panel" VerticalAlignment="Center" HorizontalAlignment="Center">
                         <StackPanel Orientation="Horizontal" Spacing="7" VerticalAlignment="Center">
-                            <Ellipse Width="30" Height="30" VerticalAlignment="Center" Fill="Red"></Ellipse>
+                            <Grid VerticalAlignment="Center">
+                                <Ellipse Width="30" Height="30" Fill="{DynamicResource Pink}"></Ellipse>
+                                <Svg Width="18" Height="18" Path="{DynamicResource Cubes}"></Svg>
+                            </Grid>
                             <TextBlock Classes="t-m t-20" VerticalAlignment="Center">Category</TextBlock>
                             <Rectangle Width="1" VerticalAlignment="Stretch" Fill="{DynamicResource PanelDivider}"></Rectangle>
-                            <Button VerticalAlignment="Center" Classes="btn" Width="30" Height="30" Margin="6 0 0 0"><Svg Path="../Assets/Images/plus.svg" Height="18" Width="18" VerticalAlignment="Center" HorizontalAlignment="Center"></Svg></Button>
+                            <Button VerticalAlignment="Center" Classes="btn" Width="30" Height="30" Margin="6 0 0 0"><Svg Path="{DynamicResource Plus}" Height="18" Width="18" VerticalAlignment="Center" HorizontalAlignment="Center"></Svg></Button>
                         </StackPanel>
                     </Border>
                 </Border>
