--- a/PlanIt/Assets/Styles/Styles.axaml
+++ b/PlanIt/Assets/Styles/Styles.axaml
@@ -5,6 +5,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceInclude Source="Themes.axaml"></ResourceInclude>
+                <ResourceInclude Source="Icons.axaml"></ResourceInclude>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Styles.Resources>
@@ -39,29 +40,73 @@
                 <Setter Property="BorderBrush" Value="{DynamicResource Important}"></Setter>
             </Style>
         </Style>
+        
+        <Style Selector="^#CategoryLayoutBorder">
+            <Setter Property="Background" Value="{DynamicResource BackgroundPrimary}"></Setter>
+            <Setter Property="BorderBrush" Value="{DynamicResource BackgroundUpper}"></Setter>
+            <Setter Property="BorderThickness" Value="2"></Setter>
+            <Setter Property="Padding" Value="13"></Setter>
+            <Setter Property="CornerRadius" Value="24"></Setter>
+        </Style>
     </Style>
     
     <Style Selector="ListBox">
         <Setter Property="Background" Value="Transparent"></Setter>
-    </Style>
-    
-    <Style Selector="ListBoxItem">
-        <Style Selector="^.category">
+        <Setter Property="Padding" Value="0"></Setter>
+        
+        <Style Selector="^#CategoryListBox > ListBoxItem">
             <Setter Property="Background" Value="{DynamicResource BackgroundCategory}"></Setter>
             <Setter Property="CornerRadius" Value="8"></Setter>
             <Setter Property="Margin" Value="0  0 0 8"></Setter>
             <Setter Property="Padding" Value="6"></Setter>
+            <Setter Property="HorizontalAlignment" Value="Stretch"></Setter>
             
             <Style Selector="^:pointerover /template/ ContentPresenter#PART_ContentPresenter">
                 <Setter Property="Background" Value="{DynamicResource CategoryHover}"></Setter>
                 <Setter Property="Cursor" Value="Hand"></Setter>
             </Style>
         </Style>
-    </Style>
+        
+        <Style Selector="^#CategoryColorsListBox > ListBoxItem">
+            <Setter Property="Padding" Value="0"></Setter>
+            <Setter Property="Margin" Value="0"></Setter>
+            <Setter Property="Width" Value="30"></Setter>
+            <Setter Property="Height" Value="30"></Setter>
+            <Setter Property="Background" Value="Transparent"></Setter>
+            <Setter Property="CornerRadius" Value="15"></Setter>
+            
+            <Style Selector="^:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+                <Setter Property="Background" Value="Transparent"></Setter>
+                <Setter Property="Cursor" Value="Hand"></Setter>
+                <Setter Property="BorderBrush" Value="{DynamicResource BackgroundUpper}"></Setter>
+                <Setter Property="BorderThickness" Value="1"></Setter>
+            </Style>
+        </Style>
+        
+        <Style Selector="^#CategoryIconsListBox > ListBoxItem">
+            <Setter Property="Background" Value="{DynamicResource BackgroundIconOverlay}"></Setter>
+            <Setter Property="CornerRadius" Value="15"></Setter>
+            <Setter Property="Padding" Value="0"></Setter>
+            <Setter Property="Margin" Value="0"></Setter>
+            <Setter Property="Width" Value="30"></Setter>
+            <Setter Property="Height" Value="30"></Setter>
+            
+            <Style Selector="^:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+                <Setter Property="Background" Value="{DynamicResource BackgroundIconOverlay}"></Setter>
+                <Setter Property="Cursor" Value="Hand"></Setter>
+                <Setter Property="BorderBrush" Value="{DynamicResource StrokeIconOverlay}"></Setter>
+                <Setter Property="BorderThickness" Value="1"></Setter>
+            </Style>
+        </Style>
+     </Style>
     
     <Style Selector="TextBlock">
         <Setter Property="FontFamily" Value="Inter"></Setter>
         <Setter Property="Foreground" Value="{DynamicResource Text}"></Setter>
+        
+        <Style Selector="^.t-8">
+            <Setter Property="FontSize" Value="10"></Setter>
+        </Style>
         
         <Style Selector="^.t-10">
             <Setter Property="FontSize" Value="10"></Setter>
@@ -253,6 +298,11 @@
         </Style>
     </Style>
     
+    <Style Selector="TextBox.TitleInput">
+        <Setter Property="CornerRadius" Value="8"></Setter>
+        <!-- ... -->
+    </Style>
+    
     <Style Selector="ScrollViewer ScrollBar:vertical">
         <Style Selector="^ /template/ RepeatButton">
             <Setter Property="Opacity" Value="0" />
@@ -274,7 +324,7 @@
         </Style>
     </Style>
     
-    <Style Selector="ScrollViewer /template/ ScrollContentPresenter#PART_ContentPresenter">
+    <Style Selector="ScrollViewer.mainScroll /template/ ScrollContentPresenter#PART_ContentPresenter">
         <Setter Property="Grid.ColumnSpan" Value="1"/>
         <Setter Property="Margin" Value="0 0 6 0"></Setter>
     </Style>
