--- a/PlanIt/Views/MainWindow.axaml
+++ b/PlanIt/Views/MainWindow.axaml
@@ -3,6 +3,7 @@
         xmlns:vm="using:PlanIt.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:models="clr-namespace:PlanIt.Models"
         mc:Ignorable="d" d:DesignWidth="960" d:DesignHeight="540"
         x:Class="PlanIt.Views.MainWindow"
         x:DataType="vm:MainViewModel"
@@ -50,10 +51,9 @@
                     <Border x:Name="UpperBlock" Padding="11 8">
                         <Grid ColumnDefinitions="*, Auto">
                             <StackPanel Orientation="Horizontal" Spacing="6">
-                                <Border VerticalAlignment="Center" Height="36" Width="36" BorderThickness="2" BorderBrush="{DynamicResource StrokeButton}" Background="{DynamicResource BackgroundButton}" CornerRadius="32">
+                                <Border VerticalAlignment="Center" Height="36" Width="36" BorderThickness="1" BorderBrush="{DynamicResource StrokeButton}" Background="{DynamicResource BackgroundButton}" CornerRadius="32">
                                     <PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Height="16" Width="16" Data="{StaticResource ListIcon}" Foreground="{DynamicResource Text}"></PathIcon>
                                 </Border>
-                                <!-- <Svg VerticalAlignment="Center" Path="{DynamicResource LogoIcon}" Height="36" Width="36"></Svg> -->
                                 <TextBlock VerticalAlignment="Center" Classes="t-b t-22">PlanIt</TextBlock>
                             </StackPanel>
                             <ToggleSwitch Grid.Column="1" x:Name="ThemeChanger" OnContent="" OffContent="" IsChecked="{Binding WindowVM.IsDarkTheme, Mode=TwoWay}"></ToggleSwitch>
@@ -135,16 +135,17 @@
                                             <PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Height="14" Width="14" Data="{StaticResource PlusIcon}" Foreground="{DynamicResource Text}"></PathIcon>
                                         </Button>
                                     </Grid>
-                                    <ListBox x:Name="CategoryListBox" Grid.Row="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" ItemsSource="{Binding WindowVM.Categories}">
+                                    <ListBox x:Name="CategoryListBox" Grid.Row="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled" SelectedItem="{Binding WindowVM.WorkingCategory}">
                                         <ListBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <Grid ColumnDefinitions="Auto, *, Auto" HorizontalAlignment="Stretch" VerticalAlignment="Center" ColumnSpacing="5">
+                                            <DataTemplate DataType="models:Category">
+                                                <Grid ColumnDefinitions="Auto, *, Auto, Auto" HorizontalAlignment="Stretch" VerticalAlignment="Center" ColumnSpacing="5">
                                                     <Grid HorizontalAlignment="Left" VerticalAlignment="Center">
                                                         <Ellipse Width="26" Height="26" HorizontalAlignment="Center" VerticalAlignment="Center" Fill="{Binding Color, Converter={StaticResource ResourceLookupConverter}}"></Ellipse>
                                                         <PathIcon Width="10" Height="10" HorizontalAlignment="Center" VerticalAlignment="Center" Data="{Binding Icon, Converter={StaticResource ResourceLookupConverter}}" Foreground="{DynamicResource Text}"></PathIcon>
                                                     </Grid>
                                                     <TextBlock Grid.Column="1" Classes="t-16 t-r" VerticalAlignment="Center" TextWrapping="Wrap" Text="{Binding Title}"></TextBlock>
                                                     <TextBlock Grid.Column="2" Classes="t-18 t-b" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding TasksCount}"></TextBlock>
+                                                    <Button Width="14" Height="14" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Right" Classes="taskBtn" Command="{Binding Path=DataContext.WindowVM.RemoveCategory, ElementName=MainWindowLayout}" CommandParameter="{Binding }" IsVisible="{Binding $parent[ListBoxItem].IsPointerOver}"><PathIcon Width="12" Height="12" Data="{StaticResource TrashIcon}" Foreground="{DynamicResource TaskTrash}"></PathIcon></Button>
                                                 </Grid>
                                             </DataTemplate>
                                         </ListBox.ItemTemplate>
@@ -163,24 +164,27 @@
                     </Grid.RowDefinitions>
                     
                     <Border Padding="8" HorizontalAlignment="Stretch">
-                        <Border Padding="6" x:Name="Panel" VerticalAlignment="Center" HorizontalAlignment="Center">
-                            <StackPanel Orientation="Horizontal" Spacing="7" VerticalAlignment="Center">
-                                <Grid VerticalAlignment="Center">
-                                    <Ellipse Width="30" Height="30" Fill="{Binding WindowVM.PanelElement.Color, Converter={StaticResource ResourceLookupConverter}}"></Ellipse>
-                                    <PathIcon Width="14" Height="14" Data="{Binding WindowVM.PanelElement.Icon, Converter={StaticResource ResourceLookupConverter}}" Foreground="{DynamicResource Text}"></PathIcon>
-                                </Grid>
-                                <TextBlock Classes="t-m t-20" VerticalAlignment="Center" Text="{Binding WindowVM.PanelElement.Text}"></TextBlock>
-                                <Rectangle Width="1" VerticalAlignment="Stretch" IsVisible="{Binding WindowVM.PanelElement.PlusIsVisible}" Fill="{DynamicResource PanelDivider}"></Rectangle>
-                                <Button VerticalAlignment="Center" Classes="btn" Width="30" Height="30" Margin="6 0 0 0" Command="{Binding WindowVM.ShowTaskOverlay}" IsVisible="{Binding WindowVM.PanelElement.PlusIsVisible}">
-                                   <PathIcon Height="14" Width="14" Data="{StaticResource PlusIcon}" Foreground="{DynamicResource Text}"></PathIcon> 
-                                </Button>
-                            </StackPanel>
-                        </Border>
+                        <Grid>
+                            <TextBlock Text="Choose the category to show" IsVisible="{Binding !WindowVM.PanelVisible}" Classes="t-sb t-20" Foreground="{DynamicResource TaskSecondaryText}"></TextBlock>
+                            <Border Padding="6" x:Name="Panel" VerticalAlignment="Center" HorizontalAlignment="Center" IsVisible="{Binding WindowVM.PanelVisible}">
+                                <StackPanel Orientation="Horizontal" Spacing="7" VerticalAlignment="Center">
+                                    <Grid VerticalAlignment="Center">
+                                        <Ellipse Width="30" Height="30" Fill="{Binding WindowVM.PanelColor, Converter={StaticResource ResourceLookupConverter}}"></Ellipse>
+                                        <PathIcon Width="14" Height="14" Data="{Binding WindowVM.PanelIcon, Converter={StaticResource ResourceLookupConverter}}" Foreground="{DynamicResource Text}"></PathIcon>
+                                    </Grid>
+                                    <TextBlock Classes="t-m t-20" VerticalAlignment="Center" Text="{Binding WindowVM.PanelText}"></TextBlock>
+                                    <Rectangle Width="1" VerticalAlignment="Stretch" IsVisible="{Binding WindowVM.PanelPlusIsVisible}" Fill="{DynamicResource PanelDivider}"></Rectangle>
+                                    <Button VerticalAlignment="Center" Classes="btn" Width="30" Height="30" Margin="6 0 0 0" Command="{Binding WindowVM.ShowTaskOverlay}" IsVisible="{Binding WindowVM.PanelPlusIsVisible}">
+                                       <PathIcon Height="14" Width="14" Data="{StaticResource PlusIcon}" Foreground="{DynamicResource Text}"></PathIcon> 
+                                    </Button>
+                                </StackPanel>
+                            </Border>
+                        </Grid>
                     </Border>
                     
                     <Border Grid.Row="1" Padding="17 0">
                         <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" AllowAutoHide="False" Classes="mainScroll">
-                            <ItemsControl>
+                            <ItemsControl x:Name="TasksItemsControl">
                             </ItemsControl>
                         </ScrollViewer>
                     </Border>
@@ -190,23 +194,23 @@
         <Grid x:Name="InputBlocker" Background="Transparent" IsHitTestVisible="True" IsVisible="{Binding OverlayService.IsAnyVisible}"></Grid>
         <Grid x:Name="CategoryCreateLayout" ZIndex="2" IsHitTestVisible="True" IsVisible="{Binding OverlayService.IsCategoryCreateVisible}">
             <Border Background="Black" Opacity="0.4" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></Border>
-            <Border Padding="13" Width="352" Height="290" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="CategoryLayoutBorder">
+            <Border Width="352" Height="290" VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="CategoryLayoutBorder">
                 <Grid RowDefinitions="Auto, Auto, Auto, Auto" RowSpacing="7">
                     <Grid ColumnDefinitions="Auto, *, Auto">
                         <Button Classes="btn" Width="30" Height="30" HorizontalAlignment="Left" VerticalAlignment="Center" Command="{Binding CategoryCreationVM.HideCategoryOverlay}"><PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Width="12" Height="12" Data="{StaticResource DenyIcon}" Foreground="{DynamicResource Text}"></PathIcon></Button>
                         <TextBlock Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Classes="t-b t-14" Foreground="{DynamicResource Text}">New Category</TextBlock>
-                        <Button Grid.Column="2" Classes="btn" Width="30" Height="30" HorizontalAlignment="Right" VerticalAlignment="Center" Command="{Binding CategoryCreationVM.ApplyCreation}"><PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Width="12" Height="12" Data="{StaticResource AcceptIcon}" Foreground="{DynamicResource Text}"></PathIcon></Button>
+                        <Button Grid.Column="2" Classes="btn" Width="30" Height="30" HorizontalAlignment="Right" VerticalAlignment="Center" Command="{Binding CategoryCreationVM.ApplyCreation}" CommandParameter="{Binding CategoryCreationVM.NewCategory}"><PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Width="12" Height="12" Data="{StaticResource AcceptIcon}" Foreground="{DynamicResource Text}"></PathIcon></Button>
                     </Grid>
                     <Grid Grid.Row="1" ColumnDefinitions="Auto, *" Margin="0 3 0 0" ColumnSpacing="36">
                         <Grid VerticalAlignment="Center" HorizontalAlignment="Left">
-                            <Ellipse VerticalAlignment="Center" HorizontalAlignment="Center" Width="80" Height="80" Fill="{Binding CategoryCreationVM.SelectedColor, Converter={StaticResource ResourceLookupConverter}}"></Ellipse>
-                            <PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Width="36" Height="36" Data="{Binding CategoryCreationVM.SelectedIcon, Converter={StaticResource ResourceLookupConverter}}" Foreground="{DynamicResource Text}"></PathIcon>
+                            <Ellipse VerticalAlignment="Center" HorizontalAlignment="Center" Width="80" Height="80" Fill="{Binding CategoryCreationVM.NewCategory.Color, Converter={StaticResource ResourceLookupConverter}}"></Ellipse>
+                            <PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Width="36" Height="36" Data="{Binding CategoryCreationVM.NewCategory.Icon, Converter={StaticResource ResourceLookupConverter}}" Foreground="{DynamicResource Text}"></PathIcon>
                         </Grid>
-                        <TextBox Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Watermark="Title..." Text="{Binding CategoryCreationVM.EnteredTitle, Mode=TwoWay}" Classes="titleInput"></TextBox>
+                        <TextBox Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Watermark="Title..." Text="{Binding CategoryCreationVM.NewCategory.Title, Mode=TwoWay}" Classes="basicInput"></TextBox>
                     </Grid>
                     <Grid Grid.Row="2" RowDefinitions="Auto, Auto">
                         <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Colors</TextBlock>
-                        <ListBox Grid.Row="1" x:Name="CategoryColorsListBox" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectedItem="{Binding CategoryCreationVM.SelectedColor, Mode=TwoWay}" ItemsSource="{Binding CategoryCreationVM.Colors}">
+                        <ListBox Grid.Row="1" x:Name="CategoryColorsListBox" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectedItem="{Binding CategoryCreationVM.NewCategory.Color, Mode=TwoWay}" ItemsSource="{Binding CategoryCreationVM.Colors}">
                             <ListBox.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <UniformGrid Columns="9" RowSpacing="7" ColumnSpacing="7"></UniformGrid>
@@ -221,7 +225,7 @@
                     </Grid>
                     <Grid Grid.Row="3" RowDefinitions="Auto, Auto">
                         <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Icons</TextBlock>
-                        <ListBox Grid.Row="1" x:Name="CategoryIconsListBox" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectedItem="{Binding CategoryCreationVM.SelectedIcon, Mode=TwoWay}" ItemsSource="{Binding CategoryCreationVM.Icons}">
+                        <ListBox Grid.Row="1" x:Name="CategoryIconsListBox" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectedItem="{Binding CategoryCreationVM.NewCategory.Icon, Mode=TwoWay}" ItemsSource="{Binding CategoryCreationVM.Icons}">
                             <ListBox.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <UniformGrid Rows="2" Columns="9" RowSpacing="7" ColumnSpacing="7"></UniformGrid>
@@ -240,6 +244,46 @@
                 </Grid>
             </Border>
         </Grid>
-        <Grid x:Name="TaskCreateLayout" ZIndex="2" Background="Black" Opacity="0.4" IsHitTestVisible="True" IsVisible="{Binding OverlayService.IsTaskCreateVisible}"></Grid>
+        <Grid x:Name="TaskCreateLayout" ZIndex="2" IsHitTestVisible="True" IsVisible="{Binding OverlayService.IsTaskCreateVisible}">
+            <!-- {Binding OverlayService.IsTaskCreateVisible} -->
+            <Border Background="Black" Opacity="0.4" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"></Border>
+            <Border VerticalAlignment="Center" HorizontalAlignment="Center" x:Name="TaskLayoutBorder">
+                <Grid RowDefinitions="Auto, Auto" RowSpacing="10">
+                    <Grid ColumnDefinitions="Auto, *, Auto">
+                        <Button Classes="btn" Width="30" Height="30" HorizontalAlignment="Left" VerticalAlignment="Center"><PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Width="12" Height="12" Data="{StaticResource DenyIcon}" Foreground="{DynamicResource Text}"></PathIcon></Button>
+                        <TextBlock Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Classes="t-b t-14" Foreground="{DynamicResource Text}">New Task</TextBlock>
+                        <Button Grid.Column="2" Classes="btn" Width="30" Height="30" HorizontalAlignment="Right" VerticalAlignment="Center"><PathIcon VerticalAlignment="Center" HorizontalAlignment="Center" Width="12" Height="12" Data="{StaticResource AcceptIcon}" Foreground="{DynamicResource Text}"></PathIcon></Button>
+                    </Grid>
+                    <Grid Grid.Row="1" RowDefinitions="Auto, Auto, Auto, Auto" ColumnDefinitions="*, Auto" RowSpacing="4" ColumnSpacing="10">
+                        <Grid RowDefinitions="Auto, Auto">
+                            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Title</TextBlock>
+                            <TextBox Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" Classes="basicInput" MinWidth="227"></TextBox>
+                        </Grid>
+                        <Grid Grid.Row="1" Grid.Column="0" Grid.RowSpan="3" RowDefinitions="Auto, *" VerticalAlignment="Stretch">
+                            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Description</TextBlock>
+                            <TextBox Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Classes="basicInput" TextWrapping="Wrap" AcceptsReturn="True" MinWidth="227"></TextBox>
+                        </Grid>
+                        <Grid Grid.Row="0" Grid.Column="1" Grid.RowDefinitions="Auto, Auto">
+                            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Date</TextBlock>
+                            <DatePicker Grid.Row="1" Width="300"></DatePicker>
+                        </Grid>
+                        <Grid Grid.Row="1" Grid.Column="1" RowDefinitions="Auto, Auto">
+                            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Time</TextBlock>
+                            <TimePicker Grid.Row="1" Width="300"></TimePicker>
+                        </Grid>
+                        <Grid Grid.Row="2" Grid.Column="1" RowDefinitions="Auto, Auto" ColumnDefinitions="50*, 50*" ColumnSpacing="6">
+                            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Repeat</TextBlock>
+                            <TextBlock Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Notify</TextBlock>
+                            <ComboBox Grid.Row="1" Grid.Column="0" Width="147"></ComboBox>
+                            <ComboBox Grid.Row="1" Grid.Column="1" Width="147"></ComboBox>
+                        </Grid>
+                        <Grid Grid.Row="3" Grid.Column="1" RowDefinitions="Auto, Auto">
+                            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Classes="t-8 t-b" Foreground="{DynamicResource TextOverlaySecondary}">Priority</TextBlock>
+                            <ComboBox Grid.Row="1" HorizontalAlignment="Left" Width="147"></ComboBox>
+                        </Grid>
+                    </Grid>
+                </Grid>
+            </Border>
+        </Grid>
     </Grid>
 </Window>
